gke-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-2 # name of my deployment
  labels:
    namespace: default
    app: flask-2 # label of deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-pod # Apply deployment to the pod named flask-pod
  template:
    metadata:
      labels:
        namespace: default
        app: flask-pod # the name of my pod is flask-pod
        version: v2
    spec:
      containers:
        - name: flask-2
          imagePullPolicy: Always
          image: 995040/canary-deployment:flask2
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: lbservice
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    namespace: default
    app: flask-pod # apply this service to the pod named flask-pod
