Virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: lbservice
        port:
          number: 80
        subset: subset-v1
      weight: 80
    - destination:
        host: lbservice
        port:
          number: 80
        subset: subset-v2
      weight: 20
